# self-driving-sim

./: .gitignore  README.md  pyproject.toml
context/resources/ex/: quiz3.md
context/resources/ex/asn-2/: pyproject.toml
context/resources/ex/asn-2/src/Q1/cnn/: inf.py  train.py
context/resources/ex/asn-2/src/Q1/knn/: inf.py  train.py
context/resources/ex/asn-2/src/Q1/logreg/: inf.py  train.py
context/resources/ex/asn-2/src/Q2/: nn_inf.py  nn_train.py
context/resources/ex/asn-2/src/Q2/knn/: inf.py  train.py
context/resources/ex/asn-2/src/Q2/logreg/: inf.py  train.py
context/resources/ex/asn-2/src/Q3/: captcah_train.py  captcha_inf.py
context/resources/ex/lab1/: Lab1_Numpy_Exercise.ipynb  Lab1_Python_Tutorial.ipynb
context/resources/ex/lab2/: Lab2.ipynb
context/resources/ex/lab3/: notebook.ipynb  pyproject.toml
context/resources/material/s10/: Pandas_Introduction1 (1).ipynb  inference.py  iris_classification.py
context/resources/material/s12/: Session12.md  diabetes.py  standard.py
context/resources/material/s14/: Session14.md
context/resources/material/s15/: LR_vs_SGD.py  Session15.md
context/resources/material/s16/: Logistic_Regression.py  Session16.md  petrol.py
context/resources/material/s17/: Session17.md
context/resources/material/s18/: inference.py  smile_detection.py
context/resources/material/s19/: inference.py
context/resources/material/s2/: Session2_Codes.ipynb  session2.ipynb
context/resources/material/s20/: fire_detection_NN.py
context/resources/material/s21/: Session21.md  captcah_train.py  captcah_train_v2.py
context/resources/material/s22/: Session22.md  captcah_train.py
context/resources/material/s23/: Session23.md  yolo.ipynb
context/resources/material/s3/: Session3_Codes.ipynb  session3.ipynb  (+1 more)
context/spec/: spec.md
context/transcripts/: session22.md  session23.md  session24.md  session25.md
data/: driving_log.csv  driving_log.csv.bak
src/: augment.py  dataset.py  model.py  test_simulation.py  train.py  visualize_data.py
(+19 files in other folders)
