[project]
name = "dps-final-project"
version = "0.1.0"
requires-python = "==3.11.*"
dependencies = [
    # TensorFlow — Apple Silicon (Metal GPU backend)
    # NOTE: tensorflow-macos replaces tensorflow + tensorflow-gpu from the original
    # Windows-only packages dropped: _tflow_select, tensorflow-gpu, mkl, intel-openmp,
    #   m2w64-*, msys2-conda-epoch, vc, vs2015_runtime, ucrt, win_inet_pton, pyreadline
    "tensorflow-macos>=2.13",
    "tensorflow-metal>=1.1",          # Metal GPU plugin for Apple Silicon
    "tensorflow-estimator>=2.13",
    "tensorboard>=2.13",

    # Core ML / scientific
    # tensorflow-macos 2.14 was compiled against NumPy 1.x — 2.x breaks it
    "numpy>=1.24,<2.0",
    "pandas>=2.0",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "scikit-image>=0.22",
    "joblib>=1.3",

    # Image processing & augmentation
    # NOTE: imgaug dropped — abandoned, conflicts with numpy>=1.24, no Apple Silicon wheel
    #   Replaced with albumentations (actively maintained, faster, M-series compatible)
    "opencv-python>=4.8",
    "albumentations>=1.3",
    "imageio>=2.31",
    "tifffile>=2023.1",
    "Pillow>=10.0",

    # Web server (real-time)
    "flask>=3.0",
    "flask-socketio>=5.3",
    "python-socketio>=5.10",
    "python-engineio>=4.8",

    # Visualization
    "matplotlib>=3.8",

    # Utilities
    "requests>=2.31",
    "pyjwt>=2.8",
    "six>=1.16",
    "termcolor>=2.3",
    "pywavelets>=1.4",
    "networkx>=3.1",
    "opt-einsum>=3.3",
    "h5py>=3.9",
    "protobuf>=4.24",
]

[tool.uv]
package = false
